objects/DMAPP__Insight_Solution_Opportunity__c.object
<CustomObject>
    <description>Join table for the Insight Map Solutions vs. the Opp Map&apos;s Potential/Current/Won Opportunities</description>
    <fields>
        <fullName>DMAPP__Account_Insight_Map_Node__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Account Insight Map Node</label>
        <referenceTo>DMAPP__Account_Insight_Map_Node__c</referenceTo>
        <relationshipLabel>Insight Solution Opportunities</relationshipLabel>
        <relationshipName>Insight_Solution_Opportunities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategy_Map_Node__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Deprecated</description>
        <label>Strategy Map Node  (DEPRECATED)</label>
        <referenceTo>DMAPP__DM_Strategy_Map_Node__c</referenceTo>
        <relationshipLabel>Insight Solution Opportunities</relationshipLabel>
        <relationshipName>Insight_Solution_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Unit_Solution_Opp__c</fullName>
        <description>The Opp Map&apos;s Unit Solution Opportunity</description>
        <inlineHelpText>The Opp Map&apos;s Unit Solution Opportunity</inlineHelpText>
        <label>Unit Opp</label>
        <referenceTo>DMAPP__Unit_Solution_Opp__c</referenceTo>
        <relationshipLabel>Insight Solution Opportunities</relationshipLabel>
        <relationshipName>Insight_Solution_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Insight Solution Opportunity</label>
    <nameField>
        <label>Insight Solution Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insight Solution Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>